<resources>
    <string name="app_name">ExpenseManagementApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textLogin">Đăng nhập</string>
    <string name="textRegister">Đăng ký</string>
    <string name="registerSuccess">Đăng ký thành công !</string>
    <string name="registerSuccessText">Xin chúc mừng. tài khoản của bạn đã được tạo. Đăng nhập để cùng khám phá ứng dụng ngay!</string>
    <string name="confirm">Xác thực</string>
    <string name="textLoginMore">Mỗi giây một bất ngờ, đăng nhập và khám phá thế giới ngay !</string>
    <string name="textUsername">Số điện thoại/Email</string>
    <string name="textPassword">Mật khẩu</string>
    <string name="textForgotPassLogin"><u>Quên mật khẩu</u></string>
    <string name="loginMore">Đăng nhập bằng phương thức khác</string>
    <string name="whatIsAccount">Bạn chưa có tài khoản?</string>
    <string name="registerNow"><u>Đăng ký ngay</u></string>
    <string name="textErrorUsername">Vui lòng nhập tài khoản</string>
    <string name="textErrorPassword">Vui lòng nhập mật khẩu</string>
    <string name="textErrorNotPhone">Vui lòng nhập số điện thoại</string>
    <string name="textErrorNotEmail">Vui lòng nhập email</string>
    <string name="textErrorUsernameCheckEmailOrPhone">Nhập đúng định dạng email hoặc số điện thoại</string>
    <string name="textErrorPhone">Nhập đúng định dạng số điện thoại</string>
    <string name="textErrorPassAgain">Mật khẩu không trùng nhau</string>
    <string name="textErrorEmail">Nhập đúng định dạng email</string>
    <string name="policyNotCheck">Hãy đồng ý với điều khoản của chúng tôi</string>
    <string name="textErrorPasswordValidate">Mật khẩu phỉa từ 8 đến 15 ký tự có chữ hoa, chữ thường, có kỹ tự đặc biệt và số</string>
    <string name="textRegisterTop">Vui lòng nhập các thông tin sau</string>
    <string name="toPhone">Nhập mã xác thực 6 số được gửi đến email: %s</string>
    <string name="textPhoneRegister">Số điện thoại</string>
    <string name="textEmailRegister">Email của bạn</string>
    <string name="textPasswordRegister">Nhập mật khẩu của bạn</string>
    <string name="textPasswordRegisterAgain">Nhập lại mật khẩu của bạn</string>
    <string name="textPasswordRegisterUppercase">Có ít nhất 1 chữ viết hoa</string>
    <string name="textPasswordRegisterNumber">Bao gồm cả chữ, số và ký tự đặc biệt</string>
    <string name="textPasswordRegisterLength">Độ dài từ 8 - 15 ký tự</string>
    <string name="textContinue">Tiếp tục</string>
    <string name="textPolicyRegister">Tôi đã đọc, hiểu rõ và đồng ý với <u>điều kiện, điều khoản</u> </string>
    <string name="textDownTimeOTP">Mã OTP có hiệu lực trong</string>
    <string name="sendAgain">Gửi lại</string>
    <string name="sendMail"><u>Nhận mã xác thực qua Email</u></string>
    <string name="loginByPin">Đăng nhập mã PIN</string>
    <string name="textTopLoginPin">Nhập mã Pin bạn đang sử dụng</string>
    <string name="textTopForgotPassword">Bạn vui lòng nhập số điện thoại hoặc email để lấy lại mật khẩu!</string>
    <string name="forgotPassword">Quên mật khẩu</string>
    <string name="newPassword">Mật khẩu mới</string>
    <string name="pleaseNewPassword">Vui lòng nhập mật khẩu mới</string>
    <string name="title_home">Home</string>
    <string name="titleCard">Chi tiêu</string>
    <string name="titleSubCard">Thu Nhập</string>
    <string name="title_wallet">Ví</string>
    <string name="title_chart">Biều đồ</string>
    <string name="title_me">Cá nhân</string>
    <string name="analytics">Phân tích</string>
    <string name="viewAll">Xem thêm</string>
    <string name="transactions">Giao dịch gần đây</string>
    <string name="notToOTP">Bạn không nhận được OTP</string>
</resources>