<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/round_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/round_wallet_24"
        android:title="@string/title_wallet" />

    <item
        android:id="@+id/navigation_add"
        android:enabled="false"
        android:title="@null" />

    <item
        android:id="@+id/navigation_chart"
        android:icon="@drawable/round_pie_chart_24"
        android:title="@string/title_chart" />

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/round_person_24"
        android:title="@string/title_me" />
</menu>