<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".ui.fragment.login.ForgotPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_16dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10dp"
            android:text="@string/forgotPassword"
            android:textColor="@color/white"
            android:textSize="@dimen/_22sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="@dimen/_16dp"
        android:text="@string/textTopForgotPassword"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_82dp"
        android:background="@drawable/background_login"
        android:paddingHorizontal="@dimen/_16dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24dp"
            android:background="@drawable/background_edit_text_true"
            android:hint="@string/textUsername"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textColorHint="@color/blue"
            android:maxLines="1"
            android:padding="@dimen/_14dp"
            android:textColor="@color/blue"
            android:textSize="@dimen/_16sp" />

        <TextView
            android:id="@+id/textErrorUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_marginTop="@dimen/_4dp"
            android:textColor="@color/red"
            android:textSize="@dimen/_14sp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textErrorUsername"
            android:layout_marginTop="@dimen/_16dp"
            android:background="@drawable/background_button"
            android:padding="@dimen/_16dp"
            android:text="@string/textLogin"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whatIsAccount"
                android:textColor="@color/color_979797"
                android:textSize="@dimen/_16sp" />

            <TextView
                android:id="@+id/register"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/registerNow"
                android:textColor="@color/blue"
                android:textSize="@dimen/_16sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>